# pathbot

./: Cargo.toml  README.md
src/: entities.rs  lib.rs  main.rs  pathbot_api.rs
src/components/: compass.rs  mod.rs  notification.rs
src/services/: keydown.rs  mod.rs
static/: index.html
