[package]
name = "pathbot"
version = "0.1.0"
authors = ["Thomas Lacroix <toto.rigolo@free.fr>"]
edition = "2018"

[dependencies]
log = "0.4"
web_logger = "0.1"
failure = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

stdweb = "0.4"
yew = { git="https://github.com/DenisKolodin/yew", branch="master", features = ["toml"] } # 0.7 temp

linked-hash-map = "0.5"
